added more report content, to demonstrate different styles (and line lengths)

--- a/spock-report/src/main/resources/ninjaCommander2.html
+++ b/spock-report/src/main/resources/ninjaCommander2.html
@@ -69,7 +69,7 @@
           <li class="specElement element spec failed">
             <h3 class="elementHeader">
               <span class="results failed">✗</span>
-              <a class="elementName">Fight Or Flight</a>
+              <a class="elementName">Fight Or Flight (Story Style)</a>
               <span class="results">
                 <span class="pie">1,1,1</span>
                 <small>
@@ -181,6 +181,129 @@
                     <blockquote class="narrative collapsed">
                       <p><strong>Given</strong> the ninja has a third level black-belt [...]</p>
                     </blockquote>
+                    <ul class="results">
+                      <li class="result element exceptions">
+                        <h5 class="elementHeader">
+                          <a class="elementName">Exceptions</a>
+                        </h5>
+                        <pre class="elementBody">
+    Condition not satisfied:
+
+    Math.max(1, 2) == 4
+         |         |
+         2         false
+
+    at FightOrFlight.WeakOpponent(FightOrFlight.groovy:37) </pre>
+                      </li>
+                      <li class="result element">
+                        <h5 class="elementHeader">
+                          <a class="elementName">Standard Output</a>
+                        </h5>
+                        <pre class="elementBody">
+    some standard
+    output </pre>
+                      </li>
+                      <li class="result element">
+                        <h5 class="elementHeader">
+                          <a class="elementName">Error Output</a>
+                        </h5>
+                        <pre class="elementBody">
+    some error
+    output </pre>
+                      </li>
+                      <li class="result element">
+                        <h5 class="elementHeader">
+                          <a class="elementName">Attachments</a>
+                        </h5>
+                        <ul class="elementBody">
+                          <li>
+                            <a href="screenshot.png">003-001-correct the email address by editing the input field-end.png</a>
+                          </li>
+                          <li>
+                            <a href="pagedump.html">003-001-correct the email address by editing the input field-end.html</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="specElement element spec failed">
+            <h3 class="elementHeader">
+              <span class="results failed">✗</span>
+              <a class="elementName">Fight Or Flight (Spec Style)</a>
+              <span class="results">
+                <span class="pie">1,1,1</span>
+                <small>
+                  <span class="counts">(1/3 requirements passed, 1 failed, 1 skipped)</span>
+                  <span class="duration">(4 mins 53 secs)</span>
+                </small>
+              </span>
+            </h3>
+            <div class="elementBody">
+              <ul class="requirements">
+                <li class="specElement element requirement passed">
+                  <h4 class="elementHeader">
+                    <span class="results passed">✓</span>
+                    <a class="elementName">Ninja should flee when encountering a strong opponent</a>
+                    <span class="results">
+                      <small>
+                        <span class="duration">(0.37 secs)</span>
+                      </small>
+                    </span>
+                  </h4>
+                  <div class="elementBody">
+                    <ul class="results">
+                      <li class="result element">
+                        <h5 class="elementHeader">
+                          <a class="elementName">Standard Output</a>
+                        </h5>
+                        <pre class="elementBody">
+    some standard
+    output </pre>
+                      </li>
+                      <li class="result element">
+                        <h5 class="elementHeader">
+                          <a class="elementName">Attachments</a>
+                        </h5>
+                        <ul class="elementBody">
+                          <li>
+                            <a href="screenshot.png">003-001-correct the email address by editing the input field-end.png</a>
+                          </li>
+                          <li>
+                            <a href="pagedump.html">003-001-correct the email address by editing the input field-end.html</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="specElement element requirement skipped">
+                  <h4 class="elementHeader">
+                    <span class="results skipped">?</span>
+                    <a class="elementName">Ninja should cast a tee-mac-woo spell when attacked by an invisible opponent (and hope for the best)</a>
+                    <span class="results">
+                      <small>
+                        <span class="duration">(0.00 secs)</span>
+                      </small>
+                    </span>
+                  </h4>
+                  <div class="elementBody">
+                  </div>
+                </li>
+                <li class="specElement element requirement failed">
+                  <h4 class="elementHeader">
+                    <span class="results failed">✗</span>
+                    <a class="elementName">Ninja should engage a weak opponent</a>
+                    <span class="results">
+                      <small>
+                        <span class="duration">(4.16 secs)</span>
+                      </small>
+                    </span>
+                  </h4>
+                  <div class="elementBody">
                     <ul class="results">
                       <li class="result element exceptions">
                         <h5 class="elementHeader">
