--- a/spock-report/src/main/resources/ninjaCommander.html
+++ b/spock-report/src/main/resources/ninjaCommander.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Spock Report - Ninja Commander</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/style.css" rel="stylesheet" media="screen">
+    <link href="css/report.css" rel="stylesheet" media="screen">
   </head>
   <body class="container-fluid">
   <div class="navbar navbar-fixed-top">
