--- a/spock-report/src/main/resources/demoReport.html
+++ b/spock-report/src/main/resources/demoReport.html
@@ -47,33 +47,32 @@
           </select>
         </div>
         <form class="navbar-search">
-          <input type="text" class="search-query" placeholder="Search Terms (coming soon)">
+          <input type="text" class="search-query" placeholder="Search Terms (coming soon!)">
         </form>
       </div>
     </div>
   </div>
   <h1 style="text-align: center;">
     <span class="elementName">Ninja Commander</span>
-      <span class="results">
-         <small>
-           <span class="pie">220,40,10</span><br/>
-           <span class="counts">22/27 specs passed, 4 failed, 1 skipped</span>
-           <span class="duration">(17 mins 41 secs)</span>
-         </small>
-      </span>
-
+    <span class="results">
+      <small>
+        <span class="pie">220,40,10</span><br/>
+        <span class="counts">22/27 specs passed, 4 failed, 1 skipped</span>
+        <span class="duration">(17 mins 41 secs)</span>
+      </small>
+    </span>
   </h1>
   <ul class="packages">
   <li class="specElement element package">
   <h2 class="elementHeader">
     <a class="elementName">com.ninja.ai</a>
-            <span class="results">
-              <span class="pie">0,2,0</span>
-              <small>
-                <span class="counts">2/2 specs failed</span>
-                <span class="duration">(7 mins 25 secs)</span>
-              </small>
-            </span>
+    <span class="results">
+      <span class="pie">0,2,0</span>
+      <small>
+        <span class="counts">2/2 specs failed</span>
+        <span class="duration">(7 mins 25 secs)</span>
+      </small>
+    </span>
   </h2>
   <ul class="elementBody specs">
   <li class="specElement element spec failed" data-tags="UI=true,Sprint=1">
@@ -82,13 +81,13 @@
       <span class="results label label-important">✗</span>
       <span class="label tag">UI</span>
       <span class="label tag">Sprint-1</span>
-                <span class="results">
-                  <span class="pie">1,1,1</span>
-                  <small>
-                    <span class="counts">1/3 requirements passed, 1 failed, 1 skipped</span>
-                    <span class="duration">(4 mins 53 secs)</span>
-                  </small>
-                </span>
+      <span class="results">
+        <span class="pie">1,1,1</span>
+        <small>
+          <span class="counts">1/3 requirements passed, 1 failed, 1 skipped</span>
+          <span class="duration">(4 mins 53 secs)</span>
+        </small>
+      </span>
     </h3>
     <div class="elementBody">
       <blockquote class="narrative">
@@ -121,9 +120,9 @@
                 <h5 class="elementHeader">
                   <a class="elementName">Standard Output</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       some standard
-      output </pre>
+      output    </pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
@@ -181,30 +180,30 @@
                 <h5 class="elementHeader">
                   <a class="elementName">Exceptions</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       Condition not satisfied:
 
       Math.max(1, 2) == 4
            |         |
            2         false
 
-      at FightOrFlight.WeakOpponent(FightOrFlight.groovy:37) </pre>
+      at FightOrFlight.WeakOpponent(FightOrFlight.groovy:37)</pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
                   <a class="elementName">Standard Output</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       some standard
-      output </pre>
+      output    </pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
                   <a class="elementName">Error Output</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       some error
-      output </pre>
+      output    </pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
@@ -231,13 +230,13 @@
       <span class="results label label-important">✗</span>
       <span class="label tag">UI</span>
       <span class="label tag">Sprint-2</span>
-                <span class="results">
-                  <span class="pie">1,1,1</span>
-                  <small>
-                    <span class="counts">1/3 requirements passed, 1 failed, 1 skipped</span>
-                    <span class="duration">(4 mins 53 secs)</span>
-                  </small>
-                </span>
+      <span class="results">
+        <span class="pie">1,1,1</span>
+        <small>
+          <span class="counts">1/3 requirements passed, 1 failed, 1 skipped</span>
+          <span class="duration">(4 mins 53 secs)</span>
+        </small>
+      </span>
     </h3>
     <div class="elementBody">
       <ul class="requirements">
@@ -256,9 +255,9 @@
                 <h5 class="elementHeader">
                   <a class="elementName">Standard Output</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       some standard
-      output </pre>
+      output    </pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
@@ -301,7 +300,7 @@
                 <h5 class="elementHeader">
                   <a class="elementName">Exceptions</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       Condition not satisfied:
 
       Math.max(1, 2) == 4
@@ -314,17 +313,17 @@
                 <h5 class="elementHeader">
                   <a class="elementName">Standard Output</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       some standard
-      output </pre>
+      output    </pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
                   <a class="elementName">Error Output</a>
                 </h5>
-                          <pre class="elementBody">
+                <pre class="elementBody">
       some error
-      output </pre>
+      output    </pre>
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
