simplify code with some underscore.js

--- a/spock-report/src/main/resources/demoReport.html
+++ b/spock-report/src/main/resources/demoReport.html
@@ -347,8 +347,9 @@
   </ul>
   </li>
   </ul>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/underscore.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script src="js/bootstrap-multiselect.js"></script>
   <script src="js/jquery.peity.js"></script>
   <script src="js/report.js"></script>
