experiments around showing less details by default

--- a/spock-report/src/main/resources/demoReportAltColor.html
+++ b/spock-report/src/main/resources/demoReportAltColor.html
@@ -42,7 +42,7 @@
           </select>
           <select id="options" multiple="multiple">
             <option value="showNarrative" selected>Show Narrative</option>
-            <option value="showResults" selected>Show Results</option>
+            <option value="showResults">Show Statistics</option>
             <option value="expandSearches" selected>Expand Searches</option>
           </select>
         </div>
@@ -54,7 +54,7 @@
   </div>
   <h1 style="text-align: center;">
     <span class="elementName">Ninja Commander</span>
-    <span class="results">
+    <span>
       <small>
         <span class="pie">220,40,10</span><br/>
         <span class="counts">22/27 specs passed, 4 failed, 1 skipped</span>
@@ -78,7 +78,7 @@
   <li class="specElement element spec failed" data-tags="UI=true,Sprint=1">
     <h3 class="elementHeader">
       <a class="elementName">Fight Or Flight (Story Style)</a>
-      <span class="results label label-important">✗</span>
+      <span class="label label-important">✗</span>
       <span class="label tag">UI</span>
       <span class="label tag">Sprint-1</span>
       <span class="results">
@@ -101,7 +101,7 @@
         <li class="specElement element requirement passed" data-tags="Regression=true">
           <h4 class="elementHeader">
             <a class="elementName">Strong Opponent</a>
-            <span class="results label label-success">✓</span>
+            <span class="label label-success">✓</span>
             <span class="label tag">Regression</span>
             <small>
               <span class="results duration">(0.37 secs)</span>
@@ -115,7 +115,7 @@
                 <strong>Then</strong> the ninja should run for his life
               </p>
             </blockquote>
-            <ul class="results">
+            <ul>
               <li class="result element">
                 <h5 class="elementHeader">
                   <a class="elementName">Standard Output</a>
@@ -143,7 +143,7 @@
         <li class="specElement element requirement skipped">
           <h4 class="elementHeader">
             <a class="elementName">Invisible Opponent</a>
-            <span class="results label label-warning">?</span>
+            <span class="label label-warning">?</span>
             <small>
               <span class="results duration">(0.00 secs)</span>
             </small>
@@ -162,7 +162,7 @@
         <li class="specElement element requirement failed">
           <h4 class="elementHeader">
             <a class="elementName">Weak Opponent</a>
-            <span class="results label label-important">✗</span>
+            <span class="label label-important">✗</span>
             <small>
               <span class="results duration">(4.16 secs)</span>
             </small>
@@ -175,7 +175,7 @@
                 <strong>Then</strong> the ninja should engage the opponent
               </p>
             </blockquote>
-            <ul class="results">
+            <ul>
               <li class="result element exceptions">
                 <h5 class="elementHeader">
                   <a class="elementName">Exceptions</a>
@@ -227,7 +227,7 @@
   <li class="specElement element spec failed" data-tags="UI=true,Sprint=2">
     <h3 class="elementHeader">
       <a class="elementName">Fight Or Flight (Spec Style)</a>
-      <span class="results label label-important">✗</span>
+      <span class="label label-important">✗</span>
       <span class="label tag">UI</span>
       <span class="label tag">Sprint-2</span>
       <span class="results">
@@ -243,14 +243,14 @@
         <li class="specElement element requirement passed" data-tags="Regression=true">
           <h4 class="elementHeader">
             <a class="elementName">Ninja should flee when encountering a strong opponent</a>
-            <span class="results label label-success">✓</span>
+            <span class="label label-success">✓</span>
             <span class="label tag">Regression</span>
             <small>
               <span class="results duration">(0.37 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
-            <ul class="results">
+            <ul>
               <li class="result element">
                 <h5 class="elementHeader">
                   <a class="elementName">Standard Output</a>
@@ -278,7 +278,7 @@
         <li class="specElement element requirement skipped">
           <h4 class="elementHeader">
             <a class="elementName">Ninja should cast a tee-mac-woo spell when attacked by an invisible opponent (and hope for the best)</a>
-            <span class="results label label-warning">?</span>
+            <span class="label label-warning">?</span>
             <small>
               <span class="results duration">(0.00 secs)</span>
             </small>
@@ -295,7 +295,7 @@
             </small>
           </h4>
           <div class="elementBody">
-            <ul class="results">
+            <ul>
               <li class="result element exceptions">
                 <h5 class="elementHeader">
                   <a class="elementName">Exceptions</a>
