--- a/spock-report/src/main/resources/demoReport.html
+++ b/spock-report/src/main/resources/demoReport.html
@@ -43,6 +43,7 @@
           <select id="options" multiple="multiple">
             <option value="showNarrative" selected>Show Narrative</option>
             <option value="showResults" selected>Show Results</option>
+            <option value="showStatistics">Show Statistics</option>
             <option value="expandSearches" selected>Expand Searches</option>
           </select>
         </div>
@@ -54,7 +55,7 @@
   </div>
   <h1 style="text-align: center;">
     <span class="elementName">Ninja Commander</span>
-    <span class="results">
+    <span>
       <small>
         <span class="pie">220,40,10</span><br/>
         <span class="counts">22/27 specs passed, 4 failed, 1 skipped</span>
@@ -66,7 +67,7 @@
   <li class="specElement element package">
   <h2 class="elementHeader">
     <a class="elementName">com.ninja.ai</a>
-    <span class="results">
+    <span class="stats">
       <span class="pie">0,2,0</span>
       <small>
         <span class="counts">2/2 specs failed</span>
@@ -81,7 +82,7 @@
       <span class="results label label-important">✗</span>
       <span class="label tag">UI</span>
       <span class="label tag">Sprint-1</span>
-      <span class="results">
+      <span class="stats">
         <span class="pie">1,1,1</span>
         <small>
           <span class="counts">1/3 requirements passed, 1 failed, 1 skipped</span>
@@ -104,7 +105,7 @@
             <span class="results label label-success">✓</span>
             <span class="label tag">Regression</span>
             <small>
-              <span class="results duration">(0.37 secs)</span>
+              <span class="stats duration">(0.37 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
@@ -145,7 +146,7 @@
             <a class="elementName">Invisible Opponent</a>
             <span class="results label label-warning">?</span>
             <small>
-              <span class="results duration">(0.00 secs)</span>
+              <span class="stats duration">(0.00 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
@@ -164,7 +165,7 @@
             <a class="elementName">Weak Opponent</a>
             <span class="results label label-important">✗</span>
             <small>
-              <span class="results duration">(4.16 secs)</span>
+              <span class="stats duration">(4.16 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
@@ -230,7 +231,7 @@
       <span class="results label label-important">✗</span>
       <span class="label tag">UI</span>
       <span class="label tag">Sprint-2</span>
-      <span class="results">
+      <span class="stats">
         <span class="pie">1,1,1</span>
         <small>
           <span class="counts">1/3 requirements passed, 1 failed, 1 skipped</span>
@@ -246,7 +247,7 @@
             <span class="results label label-success">✓</span>
             <span class="label tag">Regression</span>
             <small>
-              <span class="results duration">(0.37 secs)</span>
+              <span class="stats duration">(0.37 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
@@ -280,7 +281,7 @@
             <a class="elementName">Ninja should cast a tee-mac-woo spell when attacked by an invisible opponent (and hope for the best)</a>
             <span class="results label label-warning">?</span>
             <small>
-              <span class="results duration">(0.00 secs)</span>
+              <span class="stats duration">(0.00 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
@@ -291,7 +292,7 @@
             <a class="elementName">Ninja should engage a weak opponent</a>
             <span class="results label label-important">✗</span>
             <small>
-              <span class="results duration">(4.16 secs)</span>
+              <span class="stats duration">(4.16 secs)</span>
             </small>
           </h4>
           <div class="elementBody">
