renamed "Standard Output" to "Output"

--- a/spock-report/src/main/resources/demoReport.html
+++ b/spock-report/src/main/resources/demoReport.html
@@ -200,7 +200,7 @@
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
-                  <a class="elementName">Error Output</a>
+                  <a class="elementName">Standard Error</a>
                 </h5>
                 <pre class="elementBody">
       some error
@@ -320,7 +320,7 @@
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
-                  <a class="elementName">Error Output</a>
+                  <a class="elementName">Standard Error</a>
                 </h5>
                 <pre class="elementBody">
       some error
