--- a/spock-report/src/main/resources/demoReport2.html
+++ b/spock-report/src/main/resources/demoReport2.html
@@ -114,7 +114,7 @@
                     <ul class="results">
                       <li class="result element">
                         <h5 class="elementHeader">
-                          <a class="elementName">Standard Output</a>
+                          <a class="elementName">Output</a>
                         </h5>
                         <pre class="elementBody">
     some standard
@@ -197,7 +197,7 @@
                       </li>
                       <li class="result element">
                         <h5 class="elementHeader">
-                          <a class="elementName">Standard Output</a>
+                          <a class="elementName">Output</a>
                         </h5>
                         <pre class="elementBody">
     some standard
@@ -258,7 +258,7 @@
                     <ul class="results">
                       <li class="result element">
                         <h5 class="elementHeader">
-                          <a class="elementName">Standard Output</a>
+                          <a class="elementName">Output</a>
                         </h5>
                         <pre class="elementBody">
     some standard
@@ -320,7 +320,7 @@
                       </li>
                       <li class="result element">
                         <h5 class="elementHeader">
-                          <a class="elementName">Standard Output</a>
+                          <a class="elementName">Output</a>
                         </h5>
                         <pre class="elementBody">
     some standard
