--- a/spock-report/src/main/resources/demoReportAltColor.html
+++ b/spock-report/src/main/resources/demoReportAltColor.html
@@ -118,7 +118,7 @@
             <ul>
               <li class="result element">
                 <h5 class="elementHeader">
-                  <a class="elementName">Standard Output</a>
+                  <a class="elementName">Output</a>
                 </h5>
                 <pre class="elementBody">
       some standard
@@ -191,7 +191,7 @@
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
-                  <a class="elementName">Standard Output</a>
+                  <a class="elementName">Output</a>
                 </h5>
                 <pre class="elementBody">
       some standard
@@ -253,7 +253,7 @@
             <ul>
               <li class="result element">
                 <h5 class="elementHeader">
-                  <a class="elementName">Standard Output</a>
+                  <a class="elementName">Output</a>
                 </h5>
                 <pre class="elementBody">
       some standard
@@ -311,7 +311,7 @@
               </li>
               <li class="result element">
                 <h5 class="elementHeader">
-                  <a class="elementName">Standard Output</a>
+                  <a class="elementName">Output</a>
                 </h5>
                 <pre class="elementBody">
       some standard
